# rusty_ci

./: .gitignore  Cargo.toml  README.md  config.json
.github/workflows/: rust.yml
src/: main.rs  structs.rs  utils.rs
