[package]
name = "ci_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
itertools = "0.10.5"
regex = "1.7.1"
reqwest = "0.11.14"
serde = {version = "1.0.155", features = ["derive"] }
serde_json = "1.0.94"
tokio = "1.26.0"
